feat: gestion des rôles multi-valués (membre, admin, dt, consultant)
- User.role (String) remplacé par User.roles (List<Role>), avec
  rétrocompatibilité de lecture des documents Firestore existants (setRole)
- IapSecurityAugmentor : tous les rôles du user ajoutés à l'identité,
  System.out.println remplacés par un logger JBoss
- Nouvelle API admin : GET /api/users et PUT /api/users/{email}/roles
  (réservées au rôle admin, validation des rôles connus)
- @RolesAllowed sur TalkResource, ConferenceResource, BlogPostResource :
  lecture/écriture pour tout utilisateur authentifié, DELETE réservé à admin
- Tests : augmentor multi-rôles, API /api/users protégée, 403 sur DELETE

Closes #36